# sterowanie_kursorem

./: CMakeCache.txt  CMakeLists.txt  Makefile  TestOpenCV  aa.cpp  cmake_install.cmake  inzynierka.cpp  oko.txt
