cmake_minimum_required(VERSION 3.1.0)
project(TestOpenCV)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(OpenCV REQUIRED)
find_package(X11 REQUIRED)
add_executable(TestOpenCV inzynierka.cpp)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED )
target_link_libraries(TestOpenCV ${OpenCV_LIBS}  Threads::Threads ${X11_LIBRARIES})
SET(GCC_COVERAGE_LINK_FLAGS    "-lpthread")